<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Hexplore</string>
    <string name="facebook_app_id">187284645391384</string>
    <string name="fb_login_protocol_scheme">fb187284645391384</string>
    <string name="ble_service_uuid" tools:ignore="TypographyDashes">8397948d-36c6-4e5b-b552-32153014ad29</string>
    <string name="btn_login">LOG IN WITH FACEBOOK</string>
    <string name="txt_description">Place where people meet.</string>
    <string name="txt_title">HEXPLORE</string>
    <string name="fb_add">ADD ON FACEBOOK</string>
    <string name="preference_device_id">preference_device_id</string>
    <string name="preferences_global">preferences_global</string>

    <!-- PERMISSIONS -->
    <string name="permissions_needed">Permissions needed</string>
    <string name="permissions_denied">Permissions denied</string>
    <string name="retry">Re-try</string>
    <string name="deny">Deny</string>
    <string name="permissions_navigate_to_settings">If you wish to grant the permissions, navigate to settings.</string>
    <string name="dismiss">Dismiss</string>
    <string name="settings">Settings</string>
    <string name="preference_local_user_id">preference_local_user_id</string>
    <string name="permissions_rationale">We need the coarse location permission to scan Bluetooth beacons</string>
    <string name="hexplore_cant_work_without_permissions">Hexplore cannot work without the permissions</string>
    <string name="txt_nearby">Nearby</string>
    <string name="preference_local_name">preference_local_name</string>
    <string name="preference_local_photo_url">preference_local_photo_url</string>
    <string name="preference_local_occupation">preference_local_occupation</string>
    <string name="preference_local_bio">preference_local_bio</string>
    <string name="my_profile">My profile</string>
    <string name="occupation">Occupation</string>
    <string name="add_short_biography">Add short biography</string>
    <string name="save">Save</string>
    <string name="user_nearby">User nearby</string>

    <!---->

</resources>
