<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:minHeight="64dp"
        tools:minWidth="64dp"
        />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        app:layout_constraintStart_toEndOf="@+id/imgProfile"
        app:layout_constraintTop_toTopOf="@+id/imgProfile"
        tools:text="Pavol Drotár"
        />

    <EditText
        android:id="@+id/editOccupation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/occupation"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imgProfile"
        app:layout_constraintTop_toBottomOf="@+id/imgProfile"
        />

    <EditText
        android:id="@+id/editBio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/add_short_biography"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/editOccupation"
        app:layout_constraintStart_toStartOf="@+id/imgProfile"
        app:layout_constraintTop_toBottomOf="@+id/editOccupation"
        />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:padding="20dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editBio"
        />

</android.support.constraint.ConstraintLayout>
